--- a/index.html
+++ b/index.html
@@ -4,13 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>Project: Travel webpage</title>
-        <style>
-        #reasonone {background-color: blue;}
-        #reasontwo {color: green;}
-        #reasonthree {color: brown;}
-            h1 {color:white;}
-            body {background-color: rgb(237, 202, 237);}
-        </style>
+        <link rel="stylesheet" type="text/css" href="https://Felix328473224.github.io/tyle.css">
     </head>
     <body>
     
