--- a/mainpage.html
+++ b/mainpage.html
@@ -16,7 +16,7 @@
         <li id= "reasonthree">Super fascinating history and background, you can visit viking meuseums, sagas, and beautiful medieval architecture in cities like Reykjavik.</li>
         <img src="https://adventures.is/media/68189/sagamuseum-1.jpg" alt="Image of The Saga Museum in Iceland" width="200">
     </ol>
-        <a href="">Click here for Iceland's amazing cuisine!</p>
+        <a href="https://cuisinepage.html">Click here for Iceland's amazing cuisine!</p>
         <p>Click here to learn about Icelands amazing festivals!</p>
     </body>
 </html>
