--- a/mainpage.html
+++ b/mainpage.html
@@ -16,7 +16,7 @@
         <li id= "reasonthree">Super fascinating history and background, you can visit viking meuseums, sagas, and beautiful medieval architecture in cities like Reykjavik.</li>
         <img src="https://adventures.is/media/68189/sagamuseum-1.jpg" alt="Image of The Saga Museum in Iceland" width="200">
     </ol>
-        <a href="https://cuisinepage.html">Click here for Iceland's amazing cuisine!</a>
-        <a href="https://festivalpage.html">Click here to learn about Icelands amazing festivals!</a>
+        <a href="https://Felix32847324.github.io/festivalpage.html">Click here for Iceland's amazing cuisine!</a>
+        <a href="https://">Click here to learn about Icelands amazing festivals!</a>
     </body>
 </html>
