--- a/mainpage.html
+++ b/mainpage.html
@@ -16,7 +16,9 @@
         <li id= "reasonthree">Super fascinating history and background, you can visit viking meuseums, sagas, and beautiful medieval architecture in cities like Reykjavik.</li>
         <img src="https://adventures.is/media/68189/sagamuseum-1.jpg" alt="Image of The Saga Museum in Iceland" width="200">
     </ol>
-        <a href="https://Felix32847324.github.io/festivalpage.html">Click here for Iceland's amazing cuisine!</a>
-        <a href="https://Felix32847324.github.io/cuisinepage.html">Click here to learn about Icelands amazing festivals!</a>
+        <ul>
+       <li> <a href="https://Felix32847324.github.io/festivalpage.html">Click here for Iceland's amazing cuisine!</a></li>
+        <li><a href="https://Felix32847324.github.io/cuisinepage.html">Click here to learn about Icelands amazing festivals!</a></li>
+            </ul>
     </body>
 </html>
