--- a/mainpage.html
+++ b/mainpage.html
@@ -17,8 +17,8 @@
         <img src="https://adventures.is/media/68189/sagamuseum-1.jpg" alt="Image of The Saga Museum in Iceland" width="200">
     </ol>
         <ul>
-       <li> <a href="https://Felix32847324.github.io/festivalpage.html">Click here for Iceland's amazing cuisine!</a></li>
-        <li><a href="https://Felix32847324.github.io/cuisinepage.html">Click here to learn about Icelands amazing festivals!</a></li>
+       <li> <a href="https://Felix32847324.github.io/cuisinepage.html">Click here for Iceland's amazing cuisine!</a></li>
+        <li><a href="https://Felix32847324.github.io/festivalpage.html">Click here to learn about Icelands amazing festivals!</a></li>
             </ul>
     </body>
 </html>
