--- a/cuisinepage.html
+++ b/cuisinepage.html
@@ -1,1 +1,9 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <tittle>Iceland festivals</tittle>
+    </head>
+  <body>
+    <p>cuisine stuff</p>
+  </body>
