--- a/cuisinepage.html
+++ b/cuisinepage.html
@@ -2,8 +2,11 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <tittle>Iceland festivals</tittle>
+        <tittle>Iceland's tasty foods</tittle>
     </head>
   <body>
     <p>cuisine stuff</p>
+      <ul>
+          <a href=""
+      </ul>
   </body>
