--- a/cuisinepage.html
+++ b/cuisinepage.html
@@ -7,6 +7,6 @@
   <body>
     <p>cuisine stuff</p>
       <ul>
-          <a href="Felix32847324.github.io/mainpage.html">Go back</a>
+          <a href="https://Felix32847324.github.io/mainpage.html">Go back</a>
       </ul>
   </body>
