--- a/festivalpage.html
+++ b/festivalpage.html
@@ -6,7 +6,8 @@
     </head>
     <body>
         <h2>Icelandic Social Culture and the "Þorrablót" Festival:</h2>
-         <p> One important part of Iceland's culture is the celebration of Þorrablót, an annual midwinter festival that honors Icelandic heritage with traditional food, music, and storytelling. During this festival, Icelanders gather to enjoy a feast of historical foods, including fermented shark, pickled herring, dried fish, and various meats. It's a time for Icelanders to reconnect with their roots and celebrate the resilience and history of their people. The festival also reflects the strong sense of community and connection to the land that is central to Icelandic culture.</p>
+         <p> <br>One important part of Iceland's culture is the celebration of Þorrablót, an annual midwinter festival that honors Icelandic heritage with traditional food, music, and storytelling.</br>
+             During this festival, Icelanders gather to enjoy a feast of historical foods, including fermented shark, pickled herring, dried fish, and various meats. It's a time for Icelanders to reconnect with their roots and celebrate the resilience and history of their people. The festival also reflects the strong sense of community and connection to the land that is central to Icelandic culture.</p>
         <ul>
        <li><a href="https://Felix32847324.github.io/mainpage.html">Go back</a></li>
         </ul>
