--- a/cuisinepage.html
+++ b/cuisinepage.html
@@ -5,7 +5,44 @@
         <tittle>Iceland's tasty foods</tittle>
     </head>
   <body>
-    <p>cuisine stuff</p>
+
+    <h1>Icelandic Food</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>Category</th>
+                <th>Dish/Ingredient</th>
+                <th>Description</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Fish and Seafood</td>
+                <td>Harðfiskur</td>
+                <td>Dried fish (usually cod or haddock), eaten as a snack, often with butter.</td>
+            </tr>
+            <tr>
+                <td>Lamb</td>
+                <td>Kjötsúpa</td>
+                <td>Hearty lamb stew with root vegetables like potatoes, carrots, and turnips.</td>
+            </tr>
+            <tr>
+                <td>Dairy Products</td>
+                <td>Skyr</td>
+                <td>Thick, creamy yogurt-like product, often enjoyed with berries or sugar.</td>
+            </tr>
+            <tr>
+                <td>Traditional Dishes</td>
+                <td>Hákarl</td>
+                <td>Fermented shark meat, a traditional Icelandic delicacy, known for its strong smell.</td>
+            </tr>
+            <tr>
+                <td>Breads and Pastries</td>
+                <td>Rúgbrauð</td>
+                <td>Dense, dark rye bread, typically served with butter or alongside fish dishes.</td>
+            </tr>
+        </tbody>
+    </table>
       <ul>
           <a href="https://Felix32847324.github.io/mainpage.html">Go back</a>
       </ul>
