--- a/mainpage.html
+++ b/mainpage.html
@@ -1,5 +1,5 @@
 
-<!DOCTYPE html>
+<!DOCTYPE html> <!-- Felix, 2025-04-01, the purpose of this page is to introduce the readers to iceland and help direct them to further information -->
 <html>
     <head>
         <meta charset="utf-8">
