--- a/festivalpage.html
+++ b/festivalpage.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!-- Felix, 2025-04-01, the purpose of this page is to get readers interested in the amazing festivals in Iceland -->
 <html>
     <head>
         <meta charset="utf-8">
