--- a/cuisinepage.html
+++ b/cuisinepage.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!-- Felix, 2025-04-01, the purpose of this page is to promote and educate Icelandic foods to the readers -->
 <html>
     <head>
         <meta charset="utf-8">
