--- a/mainpage.html
+++ b/mainpage.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>Project: Travel webpage</title>
-        <link rel="stylesheet" type="text/css" href="https://Felix328473224.github.io/tyle.css">
+        <link rel="stylesheet" type="text/css" href="https://Felix328473224.github.io/style.css">
     </head>
     <body>
     
